--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react": "^18.3.1",
     "react-content-loader": "^7.0.2",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
+    "react-paginate": "^8.3.0",
     "react-router-dom": "^6.28.1",
     "react-scripts": "5.0.1",
     "sass": "^1.82.0",
